Builder interface introduced